Add Cybersecurity full course section with WhatsApp channel CTA

--- a/index.html
+++ b/index.html
@@ -133,6 +133,29 @@
     Join WhatsApp Channel
   </a>
 </section>
+<section id="cybersecurity" style="padding: 50px 20px; background: #121212; color: #f0e68c; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+  <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+    <h2 style="font-size: 2.8rem; margin-bottom: 15px; color: gold;">Cybersecurity Full Course — Learn and Master the Essentials</h2>
+    <p style="font-size: 1.2rem; line-height: 1.6; max-width: 700px; margin: 0 auto 25px;">
+      Cybersecurity is one of the most crucial skills today. Protect yourself and others by learning how to secure networks, data, and systems from cyber threats. Whether you’re a beginner or looking to sharpen your skills, this <strong>comprehensive course</strong> covers everything:
+    </p>
+    <ul style="text-align: left; display: inline-block; font-size: 1.1rem; margin-bottom: 30px; list-style: square inside; max-width: 500px;">
+      <li>Fundamentals of Cybersecurity</li>
+      <li>Network Security &amp; Firewalls</li>
+      <li>Ethical Hacking &amp; Penetration Testing</li>
+      <li>Malware Analysis &amp; Prevention</li>
+      <li>Cryptography Basics</li>
+      <li>Incident Response &amp; Forensics</li>
+      <li>Security Policies &amp; Best Practices</li>
+    </ul>
+    <p style="font-size: 1.3rem; font-weight: bold; margin-bottom: 25px;">
+      Stay ahead of cybercriminals and build a career in one of the fastest-growing fields!
+    </p>
+    <a href="https://whatsapp.com/channel/0029Vb6Hq0K7YSdCXtjgzt1x" target="_blank" rel="noopener" style="background: gold; color: #121212; font-weight: 700; padding: 15px 30px; border-radius: 30px; text-decoration: none; font-size: 1.2rem; box-shadow: 0 0 10px gold;">
+      Join our WhatsApp Channel for Updates
+    </a>
+  </div>
+</section>
 
   <!-- Example other sections placeholders -->
   <section id="tools">
