Full update: Floating 3D buttons, matrix effect, cybersecurity resources added

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </p>
   </section>
   <section id="cybersecurity-courses">
-    <h2>Cyber Security Courses</h2>
+    <h2>Cyiber Security Courses</h2>
     <p>
       Level up your skills with our expert-led Cyber Security courses. Whether you're a beginner wanting to understand the basics or a pro aiming to master advanced penetration testing and ethical hacking, we’ve got you covered.
     </p>
